FDBD-75 refactor[chat]: 유저명 일반적으로 변경, 동일한 검증을 분리, 메서드 위치 변경